# academus-aed-v2

./: CMakeLists.txt  app.c  app.h  main.c
controllers/: controller.c  course-controller.c  module-controller.c  professor-controller.c  subject-controller.c
controllers/headers/: controller.h  course-controller.h  module-controller.h  professor-controller.h  subject-controller.h
models/: course.h  header.h  module.h  professor.h  status.h  subject.h
services/: course-service.c  module-service.c  professor-service.c  service.c  subject-service.c
services/headers/: course-service.h  module-service.h  professor-service.h  service.h  subject-service.h
utils/: file.c  list.c  queue.c  utils.c
utils/headers/: file.h  list.h  queue.h  utils.h
views/: course-view.c  module-view.c  professor-view.c  subject-view.c  views.c
views/headers/: course-view.h  module-view.h  professor-view.h  subject-view.h  views.h
